Fix two layout issues, fix a bug from TrackJS, update packages

--- a/styles/_trade-params.scss
+++ b/styles/_trade-params.scss
@@ -84,7 +84,10 @@
         .barrier-picker {
             display: flex;
             flex-direction: row;
-            flex-wrap: wrap;
+
+            .param-row + .param-row {
+                margin-left: 0.25em;
+            }
         }
     }
 
