--- a/styles/_typography-theme-inverse.scss
+++ b/styles/_typography-theme-inverse.scss
@@ -22,6 +22,6 @@
     .binary-icon,
     .asset-picker-filter-icon path {
         fill: $COLOR_INVERSE_TEXT;
-        stroke: $COLOR_INVERSE_TEXT;
+        // stroke: $COLOR_INVERSE_TEXT;
     }
 }
